<resources>
    <string name="app_name">Score Board</string>
    <string name="team_a">Team A</string>
    <string name="reset">Reset</string>
    <string name="team_b">TEAM B</string>
    <string name="_0">0</string>
    <string name="_1_run">1 RUN</string>
    <string name="_2_run">2 RUN</string>
    <string name="_3_run">3 RUN</string>
    <string name="_4_run">4 RUN</string>
    <string name="_6_run">6 RUN</string>
    <string name="no_ball">NO BALL</string>
    <string name="wide">WIDE</string>
</resources>